@@ -1,5 +1,10 @@
 2014-01-30  Paolo Carlini  <paolo.carlini@oracle.com>
 
+	PR c++/58843
+	* g++.dg/lookup/crash8.C: New.
+
+2014-01-30  Paolo Carlini  <paolo.carlini@oracle.com>
+
 	PR c++/58649
 	* g++.dg/template/crash117.C: New.
 
